@@ -37,7 +37,9 @@ libast_set_program_name(const char *progname)
     if (libast_program_name && strcmp(libast_program_name, PACKAGE)) {
         FREE(libast_program_name);
     }
-    libast_program_name = STRDUP(progname);
+    if (progname) {
+        libast_program_name = STRDUP(progname);
+    }
 }
 
 void
@@ -46,7 +48,9 @@ libast_set_program_version(const char *progversion)
     if (libast_program_version && strcmp(libast_program_version, VERSION)) {
         FREE(libast_program_version);
     }
-    libast_program_version = STRDUP(progversion);
+    if (progversion) {
+        libast_program_version = STRDUP(progversion);
+    }
 }
 
 int
@@ -55,6 +59,7 @@ libast_dprintf(const char *format, ...)
     va_list args;
     int n;
 
+    REQUIRE_RVAL(libast_program_name != NULL, 0);
     va_start(args, format);
     n = vfprintf(LIBAST_DEBUG_FD, format, args);
     va_end(args);
@@ -68,6 +73,7 @@ print_error(const char *fmt, ...)
 {
     va_list arg_ptr;
 
+    REQUIRE(libast_program_name != NULL);
     va_start(arg_ptr, fmt);
     fprintf(stderr, "%s:  Error:  ", libast_program_name);
     vfprintf(stderr, fmt, arg_ptr);
@@ -80,6 +86,7 @@ print_warning(const char *fmt, ...)
 {
     va_list arg_ptr;
 
+    REQUIRE(libast_program_name != NULL);
     va_start(arg_ptr, fmt);
     fprintf(stderr, "%s:  Warning:  ", libast_program_name);
     vfprintf(stderr, fmt, arg_ptr);
@@ -92,9 +99,11 @@ fatal_error(const char *fmt, ...)
 {
     va_list arg_ptr;
 
-    va_start(arg_ptr, fmt);
-    fprintf(stderr, "%s:  FATAL:  ", libast_program_name);
-    vfprintf(stderr, fmt, arg_ptr);
-    va_end(arg_ptr);
+    if (libast_program_name != NULL) {
+        va_start(arg_ptr, fmt);
+        fprintf(stderr, "%s:  FATAL:  ", libast_program_name);
+        vfprintf(stderr, fmt, arg_ptr);
+        va_end(arg_ptr);
+    }
     exit(-1);
 }
